issue
zhangyd@zhangyd-ubuntu-22:~$ pip install xiaoming-weather-1.0.1.tar.gz 
Defaulting to user installation because normal site-packages is not writeable
Processing ./xiaoming-weather-1.0.1.tar.gz
  Preparing metadata (setup.py) ... done
Collecting chinese_calendar
  Downloading chinese_calendar-1.7.2-py2.py3-none-any.whl (11 kB)
Collecting lxml
  Downloading lxml-4.9.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.manylinux_2_24_x86_64.whl (6.9 MB)
     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 6.9/6.9 MB 713.5 kB/s eta 0:00:00
Requirement already satisfied: requests in /usr/lib/python3/dist-packages (from xiaoming-weather==1.0.1) (2.25.1)
Building wheels for collected packages: xiaoming-weather
  Building wheel for xiaoming-weather (setup.py) ... done
  Created wheel for xiaoming-weather: filename=xiaoming_weather-1.0.1-py3-none-any.whl size=6994 sha256=a381cd2d86a7e66724a132116168b4e58d7d493c247df045d80366a7ba74d4fe
  Stored in directory: /home/zhangyd/.cache/pip/wheels/49/1f/a0/cbae5958f9355fa882c6ce7f367d2fee268401ffe38f442aaa
Successfully built xiaoming-weather
Installing collected packages: chinese_calendar, lxml, xiaoming-weather
  WARNING: The script xiaoming-weather is installed in '/home/zhangyd/.local/bin' which is not on PATH.
  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.
Successfully installed chinese_calendar-1.7.2 lxml-4.9.1 xiaoming-weather-1.0.1
zhangyd@zhangyd-ubuntu-22:~$ 

Solve:
echo 'export PATH=/home/.../bin:$PATH' >>~/.bashrc

-rwxrwxr-x 1 zhangyd zhangyd 224  9月 28 15:33 xiaoming-weather
zhangyd@zhangyd-ubuntu-22:~/.local/bin$ xiaoming-weather 
Traceback (most recent call last):
  File "/home/zhangyd/.local/bin/./xiaoming-weather", line 5, in <module>
    from xiaoming_weather.xiaoming import main
  File "/home/zhangyd/.local/lib/python3.10/site-packages/xiaoming_weather/xiaoming.py", line 134
    print 'Not found temp history'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?